contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -77,8 +77,8 @@ header {
 }
 /* Slideshow container */
 .slideshow-container {
-    display: grid;
-    grid-column: 1/4;
+    /* display: flex; */
+    /* grid-column: 1/4; */
     max-width: 100%;
     height: 600px;
     position: relative;
@@ -118,7 +118,7 @@ header {
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: white;
+    color: #22577A;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -143,7 +143,7 @@ header {
     text-shadow: 0 0 10px #38A3A5;
     font-size: 60px;
     padding: 8px 12px;
-    position: absolute;
+    position: relative;
     bottom: 8px;
     width: 100%;
     text-align: center;
